Added CSS for icons project title

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,6 +11,12 @@
   -webkit-user-drag: none;
 }
 
+* img {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 body {
   height: 100vh;
   margin: 0;
@@ -272,6 +278,12 @@ canvas {
   }
 }
 
+.projectTitle {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .projectMedia {
   padding: 0.75rem;
   --sideLength: clamp(275px, 25vw, 35vh);
@@ -349,6 +361,17 @@ canvas {
   align-items: center;
   justify-content: center;
   border: 1px solid rgba(15, 18, 49, 0.271);
+}
+
+.titleIcon {
+  height: 1.5rem;
+  width: 1.5rem;
+  margin-left: 0.75rem;
+  background-repeat: no-repeat;
+  transform: translate(0%, 25%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .github-icon svg {
